--- a/platformio.ini
+++ b/platformio.ini
@@ -14,5 +14,4 @@ board = esp32dev
 framework = arduino
 lib_deps = 
 	paulstoffregen/Encoder@^1.4.1
-	dlloydev/ESP32 ESP32S2 AnalogWrite@^2.0.9
-	maizy/JC_Button_ESP@^2.0.2
+	madhephaestus/ESP32Encoder@^0.10.1
